After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 433917 - poor import of Dia's own export to Visia
poor import of Dia's own export to Visia
Status: RESOLVED FIXED
Product: dia
Classification: Other
Component: exports
0.96
Other All
: Normal normal
: 0.98
Assigned To: Ian Redfern
Dia maintainers
Depends on:
Blocks:
 
 
Reported: 2007-04-27 16:56 UTC by Jack Tanner
Modified: 2011-06-26 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jack Tanner 2007-04-27 16:56:54 UTC
Please describe the problem:
Some shapes, line thickness, and text alignment are wrong when Dia imports a Visio file that it itself created.

Steps to reproduce:
1. Create a flowchart/Terminal Interrupt shape, and stretch horizontally.
2. Add some text.
3. Save as Dia.
4. Export to Visio (vdx).
5. Open vdx file.


Actual results:
The lines of the VDX shape are thinner than the original Dia lines. The text is off-center. And the shape itself has grown an identical ovelayed twin (!) and a bunch of new connection points.

Expected results:


Does this happen every time?


Other information:
Comment 1 Lars Clausen 2007-05-06 06:00:24 UTC
Assigning to the writer of the Visio component.
Comment 2 Ian Redfern 2007-05-23 08:59:32 UTC
This is reproducible, but not easily fixed.

Taking the problems in order:

The lines of the VDX shape are thinner than the original Dia lines - Yes, this needs fixing so that at least round trip thickness is preserved.

The text is off-center - Yes, this is a bug.

And the shape itself has grown an identical ovelayed twin (!) - the rendering layer calls fill_polygon() and draw_polyline() when exporting the shape; the VDX exporter should be drawing the first of these with NoLine=1. I will investigate why it doesn't.

and a bunch of new connection points - this is unavoidable. Visio cannot represent the splines that Dia uses for curves, as it only does elliptical arcs (or NURBS in Visio 2003), so the exporter renders the shape a a series of straight lines. I'm considering putting comments in the VDX to allow the importer to convert back to an elliptical arc, but that won't come soon.

I'll do more analysis and get back to you.
Comment 3 Hans Breuer 2011-06-26 12:14:31 UTC
"text is off-center" - see bug 650527

"overlayed twin"
http://git.gnome.org/browse/dia/commit/?id=8f786713ae6367bce938d79a00dadfea346205db

remaining issue here is the line thickness, resolved by:
http://git.gnome.org/browse/dia/commit/?id=e535d092f4c7822a06e7b65fcfdde1db61ead64f