vdx: use NoLine=1 to avoid extra lines with fill_*()

As mentioned by Ian "identical ovelayed twin (!)" in
https://bugzilla.gnome.org/show_bug.cgi?id=433917#c2